Make evaluating system variables quicker.
Legacy-ID: 5550

--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5162,3 +5162,5 @@
          first cut at implementing registration for debugger system variables.
          (Phil).
 20160528 deugger/system_variable.c: include file (thanks, Fred) (Phil).
+20160529 debugger/{debugger_internals.h,expression.c,system_variable.c}: make
+         evaluating system variables quicker (Phil).
