--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5229,4 +5229,5 @@
          (Fred).
 20160606 ChangeLog,README,configure.ac,man/fuse.1: update release dates and mark
          this release as 1.2.0 (Fred).
->>>>>>> .merge-right.r5609
+20160607 debugger/{commandl.l,commandy.y,system_variable.c}: remove the need
+         for "%" when accessing system variables.
