--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5223,4 +5223,5 @@
 20160606 ChangeLog,README,configure.ac,man/fuse.1: update release dates and mark
          this release as 1.2.0 (Fred).
 20160608 data/fuse.desktop.in: update Name entry and add GenericName and
-         Keywords entries in .desktop file (Alberto Garcia).
+         Keywords entries in .desktop file (patch #369) (Alberto Garcia).
+20160609 sound/alsasound.c: avoid redefinition of NDEBUG (Sergio).
