--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5240,3 +5240,6 @@
          expression.c}: make register access just an alias for the appropriate
          system variable (Phil).
 20160608 z80/z80.c: expose all Z80 registers as system variables (Phil).
+20160608 z80/{Makefile.am,coretest.c,z80.c,z80_debugger_variables.c,
+         z80_internals.h}: move debugger variable setup to separate file
+         (Phil).
