Expose tstates since interrupt as a debugger system variable.
Legacy-ID: 5630

--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5246,3 +5246,5 @@
 20160610 man/fuse.1: document new debugger variables syntax (Phil).
 20160610 debugger/system_variable.c,man/fuse.1,peripherals/ula.c: expose last
          byte written to the ULA as a debugger system variable (Phil).
+20160612 man/fuse.1,peripherals/ula.c,spectrum.c: expose tstates since
+         interrupt as a debugger system variable (Phil).
