--- a/man/fuse.1
+++ b/man/fuse.1
@@ -4602,6 +4602,10 @@ ula:last
 The last byte written to the ULA. Note that this variable can only
 be read, not written to.
 .RE
+ula:tstates
+.RS
+The number of tstates since the last interrupt.
+.RE
 z80:
 .I register name
 .RS
