--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5248,3 +5248,4 @@
          byte written to the ULA as a debugger system variable (Phil).
 20160612 man/fuse.1,peripherals/ula.c,spectrum.c: expose tstates since
          interrupt as a debugger system variable (Phil).
+20160612 peripherals/ay.c: remove duplicated code (Phil).
