Expose primary memory control port as a debugger system variable.
Legacy-ID: 5632

--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5249,3 +5249,5 @@
 20160612 man/fuse.1,peripherals/ula.c,spectrum.c: expose tstates since
          interrupt as a debugger system variable (Phil).
 20160612 peripherals/ay.c: remove duplicated code (Phil).
+20160612 man/fuse.1,peripherals/ula.c: expose primary memory control port as
+         a debugger system variable (Phil).
