--- a/man/fuse.1
+++ b/man/fuse.1
@@ -4602,6 +4602,11 @@ ula:last
 The last byte written to the ULA. Note that this variable can only
 be read, not written to.
 .RE
+ula:mem7ffd
+.RS
+The last byte written to primary memory control port used by the ZX Spectrum
+128 and later; normally addressed at 0x7ffd, hence the name.
+.RE
 ula:tstates
 .RS
 The number of tstates since the last interrupt.
