--- a/man/fuse.1
+++ b/man/fuse.1
@@ -4602,6 +4602,11 @@ ula:last
 The last byte written to the ULA. Note that this variable can only
 be read, not written to.
 .RE
+ula:mem1ffd
+.RS
+The last byte written to memory control port used by the ZX Spectrum +2A/3;
+normally addressed at 0x1ffd, hence the name.
+.RE
 ula:mem7ffd
 .RS
 The last byte written to primary memory control port used by the ZX Spectrum
