Split long lines (thanks, Fred).
Legacy-ID: 5635

--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5266,3 +5266,4 @@
          a debugger system variable (Phil).
 20160613 man/fuse.1,peripherals/ula.c: expose secondary memory control port as
          a debugger system variable (Phil).
+20160613 z80/z80_debugger_variables.c: split long lines (thanks, Fred) (Phil).
