--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5288,3 +5288,7 @@
 20160619 fuse.c,infrastructure/startup_manager.[ch],sound.[ch]: add sound
          module to startup manager; modules with no init function are now
          supported (Phil).
+20160619 debugger/debugger.c,display.c,event.[ch],fuse.c,
+         infrastructure/startup_manager.h,peripherals/disk/fdd.c,rzx.c,
+         spectrum.c,tape.c,timer/timer.c,z80/{coretest.c,z80.c}: add event
+         subsystem into startup manager (Phil).
