--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5294,3 +5294,11 @@
          subsystem into startup manager (Phil).
 20160630 fuse.c,infrastructure/startup_manager.h: move libxml2 init into
          startup manager (Phil).
+20160630 debugger/debugger.c,event.c,fuse.c,infrastructure/startup_manager.h,
+         machine.c,machines/machines_periph.c,memory.c,mempool.c,
+         peripherals/{ay.c,disk/{beta.c,didaktik.c,disciple.c,fdd.c,opus.c,
+         plusd.c},fuller.c,ide/{divide.c,simpleide.c,zxatasp.c,zxcf.c},if1.c,
+         if2.c,kempmouse.c,melodik.c,printer.c,scld.c,speccyboot.c,specdrum.c,
+         spectranet.c,ula.c,usource.c},profile.c,psg.c,rzx.c,slt.c,sound.c,
+         spectrum.c,tape.c,timer/timer.c,z80/z80.c: make every startup module
+         dependent on setuid() having been called (Phil).
