--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5341,3 +5341,12 @@
 20160705 fuse.c,infrastructure/startup_manager.h,settings-header.pl,
          settings.pl: move settings_end into the startup manager, including
          OS X conditional dependency (Phil).
+20160706 debugger/debugger.c,display.[ch],event.c,fuse.c,
+         infrastructure/startup_manager.[ch],machine.c,
+         machines/machines_periph.c,memory.c,mempool.c,peripherals/{ay.c,
+         disk/{beta.c,didaktik.c,disciple.c,fdd.c,opus.c,plusd.c},fuller.c,
+         ide/{divide.c,simpleide.c,zxatasp.c,zxcf.c},if1.c,if2.c,kempmouse.c,
+         melodik.c,printer.c,scld.c,speccyboot.c,specdrum.c,spectranet.c,ula.c,
+         usource.c},profile.c,psg.c,rzx.c,settings.pl,slt.c,sound.c,spectrum.c,
+         tape.c,timer/timer.c,z80/{coretest.c,z80.c,z80.h}: add display
+         initialisation to the startup manager (Phil).
