--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5352,3 +5352,5 @@
          initialisation to the startup manager (Phil).
 20160706 settings.pl: remove OS X conditional code; will be maintained in the
          OS X port (thanks, Fred) (Phil).
+20160706 fuse.c,infrastructure/startup_manager.c: final tidy-ups: remove debug
+         printf calls and FIXME comments (Phil).
