--- a/man/fuse.1
+++ b/man/fuse.1
@@ -4612,7 +4612,8 @@ Other available sources are:
 .RI ` If2 "',"
 .RI ` "Opus RAM" "',"
 .RI ` "Opus ROM" "',"
-.RI ` PlusD "',"
+.RI ` "PlusD RAM" "',"
+.RI ` "PlusD ROM" "',"
 .RI ` SpeccyBoot "',"
 .RI ` Spectranet "',"
 .RI ` "Timex Dock" "',"
