--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5361,3 +5361,5 @@
 20160709 man/fuse.1,peripherals/disk/{disciple.c,plusd.c}: split +D memory
          sources. Coalesce +D and DISCiPLE RAM pages (patch #373) (Sergio).
 20160709 peripherals/joystick.c: remove stray semi-colon (Fred).
+20160709 ChangeLog,README,configure.ac,man/fuse.1: bump versions to 1.2.1
+         (Fred).
