--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5363,3 +5363,4 @@
 20160709 peripherals/joystick.c: remove stray semi-colon (Fred).
 20160709 ChangeLog,README,configure.ac,man/fuse.1: bump versions to 1.2.1
          (Fred).
+20160709 ChangeLog: tweak +D/DISCiPLE ROM/RAM change description (Fred).
