--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5374,3 +5374,5 @@
          variable (Fred).
 20160719 ui/widget/browse.c: use description for tape blocks where available
          (Fred).
+20160801 ui/{gtk,win32}/fileselector.c: add ".zip" to the file filters in
+         open file dialogs (thanks, Phil) (Sergio).
