--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5380,3 +5380,4 @@
          file (from patch #375) (Alberto Garcia).
 20160801 ui/{gtk,win32}/fileselector.c: add ".zip" to the file filters in
          open file dialogs (thanks, Phil) (Sergio).
+20160807 utils.c: remove redundant whitespace (Fred).
