--- a/hacking/ChangeLog
+++ b/hacking/ChangeLog
@@ -5381,3 +5381,4 @@
 20160801 ui/{gtk,win32}/fileselector.c: add ".zip" to the file filters in
          open file dialogs (thanks, Phil) (Sergio).
 20160807 utils.c: remove redundant whitespace (Fred).
+20160807 machines/specplus3.c: fix +3 disk autoload (part of bug #356) (Fred).
